// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for admin 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-sm navbar-custom"
  >
    <a
      class="navbar-brand mb-0 h1 fs-2"
      href="/"
    >
      Gardener
    </a>
    <button
      aria-controls="navbarNav"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler"
      data-bs-target="#navbarNav"
      data-bs-toggle="collapse"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="collapse navbar-collapse"
      id="navbarNav"
    >
      <ul
        class="navbar-nav ml-auto"
      >
        <li
          class="nav-item"
        >
          <a
            class="btn btn-link nav-link"
            href="/profile"
          >
            Profile (admin)
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="btn btn-link nav-link"
            href="/gardens"
          >
            Gardens
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="btn btn-link nav-link"
            href="/plants"
          >
            Plants
          </a>
        </li>
        <div
          class="dropdown d-flex justify-content-center"
        >
          <button
            aria-expanded="false"
            class="btn btn-link nav-link dropdown-toggle"
            data-bs-toggle="dropdown"
            type="button"
          >
            Admin
          </button>
          <ul
            class="dropdown-menu"
          >
            <li>
              <a
                class="nav-link text-black"
                href="/users"
              >
                User List
              </a>
            </li>
            <li>
              <a
                class="nav-link text-black"
                href="/gardens/all"
              >
                Garden List
              </a>
            </li>
            <li>
              <a
                class="nav-link text-black"
                href="/plants/all"
              >
                Plant List
              </a>
            </li>
          </ul>
        </div>
        <li
          class="nav-item d-flex justify-content-center"
        >
          <button
            class="btn btn-link nav-link"
          >
            Log Out
          </button>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot for non-admin user 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-sm navbar-custom"
  >
    <a
      class="navbar-brand mb-0 h1 fs-2"
      href="/"
    >
      Gardener
    </a>
    <button
      aria-controls="navbarNav"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler"
      data-bs-target="#navbarNav"
      data-bs-toggle="collapse"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="collapse navbar-collapse"
      id="navbarNav"
    >
      <ul
        class="navbar-nav ml-auto"
      >
        <li
          class="nav-item"
        >
          <a
            class="btn btn-link nav-link"
            href="/profile"
          >
            Profile (user)
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="btn btn-link nav-link"
            href="/gardens"
          >
            Gardens
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="btn btn-link nav-link"
            href="/plants"
          >
            Plants
          </a>
        </li>
        <li
          class="nav-item d-flex justify-content-center"
        >
          <button
            class="btn btn-link nav-link"
          >
            Log Out
          </button>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;
